# CMAKE_VCPKG_TEMPLATE

./: CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp
